--- a/index.html
+++ b/index.html
@@ -1,39 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Proyecto Trabajo</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <link rel="stylesheet" href="css/normalize.css">
-</head>
-<body>
-    
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/custom-select.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+    />
+    <link rel="stylesheet" href="css/normalize.css" />
+  </head>
+  <body>
     <nav class="navbar">
-        <div class="container navbar-content">
-            <h1>Where in the world?</h1>
-            <button class="btn-dark-mode">                
-                <i class="far fa-moon"></i>
-                Dark Mode
-            </button>
-        </div>
+      <div class="container navbar-content">
+        <h1>Where in the world?</h1>
+        <button class="btn-dark-mode">
+          <i class="far fa-moon"></i>
+          Dark Mode
+        </button>
+      </div>
     </nav>
 
     <header class="container filter-content my-2">
-        <form class="form-search" id="formulario">
-            <i class="fas fa-search"></i>
-            <input type="text" placeholder="Ingresa País" id="inputFormulario">
-        </form>
+      <form class="form-search" id="formulario">
+        <i class="fas fa-search"></i>
+        <input type="text" placeholder="Ingresa País" id="inputFormulario" />
+      </form>
+      <div class="custom-select" style="width: 200px">
+        <select>
+          <option value="0">Filtrar por región:</option>
+          <option value="">Todos</option>
+          <option value="Africa">África</option>
+          <option value="Americas">America</option>
+          <option value="Asia">Asia</option>
+          <option value="Europe">Europa</option>
+          <option value="Oceania">Oceanía</option>          
+        </select>
+      </div>
     </header>
 
-    <main class="container grid" id="banderas">
-               
-    </main>
-<script src="js/dark-mode.js"></script>
-<script src="js/app.js"></script>
-<script src="js/formulario.js"></script>
-</body>
+    <main class="container grid" id="banderas"></main>
+    <script src="js/dark-mode.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/formulario.js"></script>
+    <script src="js/custom-select.js"></script>
+  </body>
 </html>
